test_suite/alan-2022-examples/failing/005930_mutation.alan
source t begin leave 04 <>; 73 end
